Sync small changes
Add case insensitive completion

--- a/plugins/Makefile
+++ b/plugins/Makefile
@@ -2,11 +2,17 @@ cwd=$(shell pwd)
 all: clobber update
 
 clobber:
-	rm -f plugins.zsh
+	rm -f 00-plugins.zsh
+	rm -f 90-plugins.zsh
 
-update: zsh-256color-update zsh-bd-update zsh-colors-update zsh-functional-update zsh-syntax-highlighting-update zsh-history-substring-search-update k-update
+update: zsh-256color-update zsh-autosuggestions-update zsh-bd-update zsh-colors-update zsh-functional-update zsh-syntax-highlighting-update zsh-history-substring-search-update k-update zaw-update
 
 zsh-256color-update: zsh-256color
+	@echo git pull $<
+	@git -C $< pull 2>/dev/null >/dev/null
+	@echo "source $(cwd)/$</*.plugin.zsh" >> 00-plugins.zsh
+
+zsh-autosuggestions-update: zsh-autosuggestions
 	@echo git pull $<
 	@git -C $< pull 2>/dev/null >/dev/null
 	@echo "source $(cwd)/$</*.plugin.zsh" >> 00-plugins.zsh
@@ -36,17 +42,26 @@ zsh-history-substring-search-update: zsh-history-substring-search
 	@git -C $< pull 2>/dev/null >/dev/null
 	@echo "source $(cwd)/$</zsh-history-substring-search.zsh" >> 00-plugins.zsh
 
+zaw-update: zaw
+	@echo git pull $<
+	@git -C $< pull 2>/dev/null >/dev/null
+	@echo "source $(cwd)/$</*.plugin.zsh" >> 90-plugins.zsh
+
 k-update: k
 	@echo git pull $<
 	@git -C $< pull 2>/dev/null >/dev/null
 	@echo "source $(cwd)/$</*.plugin.zsh" >> 00-plugins.zsh
 
 
-pull: zsh-256color zsh-bd zsh-colors zsh-functional zsh-syntax-highlighting zsh-history-substring-search k
+pull: zsh-256color zsh-autosuggestions zsh-bd zsh-colors zsh-functional zsh-syntax-highlighting zsh-history-substring-search zaw k
 
 zsh-256color:
 	@echo git clone $@
 	@git clone https://github.com/chrissicool/zsh-256color 2>/dev/null >/dev/null
+
+zsh-autosuggestions:
+	@echo git clone $@
+	@git clone https://github.com/zsh-users/zsh-autosuggestions 2>/dev/null >/dev/null
 
 zsh-bd:
 	@echo git clone $@
@@ -68,6 +83,10 @@ zsh-history-substring-search:
 	@echo git clone $@
 	@git clone https://github.com/zsh-users/zsh-history-substring-search 2>/dev/null >/dev/null
 
+zaw:
+	@echo git clone $@
+	@git clone https://github.com/zsh-users/zaw 2>/dev/null >/dev/null
+
 k:
 	@echo git clone $@
 	@git clone https://github.com/zirrostig/k 2>/dev/null >/dev/null
@@ -80,4 +99,5 @@ clean:
 	rm -rf zsh-functional
 	rm -rf zsh-syntax-highlighting
 	rm -rf zsh-history-substring-search
+	rm -rf zaw
 	rm -rf k
